--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h4 {
 }
 body {
   padding: 15px;
-  max-width: 650px;
+  max-width: 500px;
   margin: auto;
   text-align: center;
 }
@@ -21,6 +21,6 @@ p {
 img {
   margin: 10px;
   border: 2px solid gray;
-  height: 300px;
+  width: 70%;
   display: inline-block;
 }
